Package_Tools/include-C/flint/in_arbeit/h/arb.h

/*
    Copyright (C) 2014 Fredrik Johansson

    This file is part of Arb.

    Arb is free software: you can redistribute it and/or modify it under
    the terms of the GNU Lesser General Public License (LGPL) as published
    by the Free Software Foundation; either version 2.1 of the License, or
    (at your option) any later version.  See <http://www.gnu.org/licenses/>.
*/


#define __ARB_VERSION 2
#define __ARB_VERSION_MINOR 23
#define __ARB_VERSION_PATCHLEVEL 0
#define ARB_VERSION "2.23.0"
/*xxxxxxxxxxx
#define __ARB_RELEASE (__ARB_VERSION * 10000 + \
                         __ARB_VERSION_MINOR * 100 + \
                         __ARB_VERSION_PATCHLEVEL)
*/

extern const char * arb_version;
#define arb_midref(x) (&(x)->mid)
#define arb_radref(x) (&(x)->rad)
#define ARB_IS_LAGOM(x) (ARF_IS_LAGOM(arb_midref(x)) && MAG_IS_LAGOM(arb_radref(x)))
#define ARB_RND ARF_RND_DOWN
extern void
arb_init(arb_t x)
;
void arb_clear(arb_t x);
arb_ptr _arb_vec_init(slong n);
void _arb_vec_clear(arb_ptr v, slong n);
extern arf_ptr arb_mid_ptr(arb_t z) ;
extern mag_ptr arb_rad_ptr(arb_t z) ;
extern int
arb_is_exact(const arb_t x)
;
extern int
arb_equal(const arb_t x, const arb_t y)
;
extern int
arb_equal_si(const arb_t x, slong y)
;
/* implementations are in arb/richcmp.c */
int arb_eq(const arb_t x, const arb_t y);
int arb_ne(const arb_t x, const arb_t y);
int arb_lt(const arb_t x, const arb_t y);
int arb_le(const arb_t x, const arb_t y);
int arb_gt(const arb_t x, const arb_t y);
int arb_ge(const arb_t x, const arb_t y);
void arb_zero(arb_t x);
extern int
arb_is_zero(const arb_t x)
;
extern void
arb_pos_inf(arb_t x)
;
extern void
arb_neg_inf(arb_t x)
;
extern void
arb_zero_pm_inf(arb_t x)
;
extern void
arb_zero_pm_one(arb_t x)
;
extern void
arb_unit_interval(arb_t x)
;
void arb_indeterminate(arb_t x);
int arb_is_finite(const arb_t x);
void arb_set(arb_t x, const arb_t y);
extern void
arb_swap(arb_t x, arb_t y)
;
void arb_set_round(arb_t z, const arb_t x, slong prec);
void arb_trim(arb_t y, const arb_t x);
void arb_neg(arb_t y, const arb_t x);
void arb_neg_round(arb_t x, const arb_t y, slong prec);
void arb_abs(arb_t y, const arb_t x);
void arb_nonnegative_abs(arb_t y, const arb_t x);
void arb_sgn(arb_t res, const arb_t x);
int arb_sgn_nonzero(const arb_t x);
void _arb_digits_round_inplace(char * s, flint_bitcnt_t * shift, fmpz_t error, slong n, arf_rnd_t rnd);
int arb_set_str(arb_t res, const char * inp, slong prec);
#define ARB_STR_MORE UWORD(1)
#define ARB_STR_NO_RADIUS UWORD(2)
#define ARB_STR_CONDENSE UWORD(16)
char * arb_get_str(const arb_t x, slong n, ulong flags);
extern void
arb_set_arf(arb_t x, const arf_t y)
;
void arb_set_si(arb_t x, slong y);
void arb_set_ui(arb_t x, ulong y);
void arb_set_d(arb_t x, double y);
void arb_set_fmpz(arb_t x, const fmpz_t y);
extern void
arb_set_fmpz_2exp(arb_t x, const fmpz_t y, const fmpz_t exp)
;
void arb_set_round_fmpz_2exp(arb_t y, const fmpz_t x, const fmpz_t exp, slong prec);
void arb_set_round_fmpz(arb_t y, const fmpz_t x, slong prec);
extern int
arb_is_one(const arb_t f)
;
void arb_one(arb_t f);
void arb_fprint(FILE * file, const arb_t x);
void arb_fprintd(FILE * file, const arb_t x, slong digits);
void arb_fprintn(FILE * file, const arb_t x, slong digits, ulong flags);
void arb_print(const arb_t x);
void arb_printd(const arb_t x, slong digits);
void arb_printn(const arb_t x, slong digits, ulong flags);
void arb_mul_2exp_si(arb_t y, const arb_t x, slong e);
extern void
arb_mul_2exp_fmpz(arb_t y, const arb_t x, const fmpz_t e)
;
extern int
arb_is_int(const arb_t x)
;
extern int
arb_is_int_2exp_si(const arb_t x, slong e)
;
/* implementations are in arb/richcmp.c */
int arb_contains_zero(const arb_t x);
int arb_is_nonzero(const arb_t x);
int arb_is_positive(const arb_t x);
int arb_is_nonnegative(const arb_t x);
int arb_is_negative(const arb_t x);
int arb_is_nonpositive(const arb_t x);
int arb_contains_negative(const arb_t x);
int arb_contains_nonpositive(const arb_t x);
int arb_contains_positive(const arb_t x);
int arb_contains_nonnegative(const arb_t x);
void arb_get_mag_lower(mag_t z, const arb_t x);
void arb_get_mag_lower_nonnegative(mag_t z, const arb_t x);
extern void
arb_get_mag(mag_t z, const arb_t x)
;
extern void
arb_get_mid_arb(arb_t z, const arb_t x)
;
extern void
arb_get_rad_arb(arb_t z, const arb_t x)
;
void arb_get_abs_ubound_arf(arf_t u, const arb_t x, slong prec);
void arb_get_abs_lbound_arf(arf_t u, const arb_t x, slong prec);
void arb_get_ubound_arf(arf_t u, const arb_t x, slong prec);
void arb_get_lbound_arf(arf_t u, const arb_t x, slong prec);
void arb_nonnegative_part(arb_t res, const arb_t x);
slong arb_rel_error_bits(const arb_t x);
extern slong
arb_rel_accuracy_bits(const arb_t x)
;
slong arb_rel_one_accuracy_bits(const arb_t x);
extern slong
arb_bits(const arb_t x)
;
void arb_randtest_exact(arb_t x, flint_rand_t state, slong prec, slong mag_bits);
void arb_randtest_wide(arb_t x, flint_rand_t state, slong prec, slong mag_bits);
void arb_randtest_precise(arb_t x, flint_rand_t state, slong prec, slong mag_bits);
void arb_randtest(arb_t x, flint_rand_t state, slong prec, slong mag_bits);
void arb_randtest_special(arb_t x, flint_rand_t state, slong prec, slong mag_bits);
void arb_urandom(arb_t x, flint_rand_t state, slong prec);
void arb_add_error_arf(arb_t x, const arf_t err);
void arb_add_error_2exp_si(arb_t x, slong err);
void arb_add_error_2exp_fmpz(arb_t x, const fmpz_t err);
void arb_add_error(arb_t x, const arb_t error);
extern void
arb_add_error_mag(arb_t x, const mag_t err)
;
int arb_contains_arf(const arb_t x, const arf_t y);
int arb_contains_fmpq(const arb_t x, const fmpq_t y);
int arb_contains_fmpz(const arb_t x, const fmpz_t y);
int arb_contains_si(const arb_t x, slong y);
int arb_contains_mpfr(const arb_t x, const mpfr_t y);