Package_Tools/include-C/flint/in_arbeit/pp/arb.pp


unit arb;
interface

{
  Automatically converted by H2Pas 1.0.0 from arb.h
  The following command line parameters were used:
    -p
    -T
    -d
    -c
    -e
    arb.h
}

{ Pointers to basic pascal types, inserted by h2pas conversion program.}
Type
  PLongint  = ^Longint;
  PSmallInt = ^SmallInt;
  PByte     = ^Byte;
  PWord     = ^Word;
  PDWord    = ^DWord;
  PDouble   = ^Double;

Type
Pchar  = ^char;
PFILE  = ^FILE;
Pflint_bitcnt_t  = ^flint_bitcnt_t;
Pfmpz  = ^fmpz;
Plongint  = ^longint;
Pmp_limb_t  = ^mp_limb_t;
Pslong  = ^slong;
Pulong  = ^ulong;
{$IFDEF FPC}
{$PACKRECORDS C}
{$ENDIF}


{
    Copyright (C) 2014 Fredrik Johansson

    This file is part of Arb.

    Arb is free software: you can redistribute it and/or modify it under
    the terms of the GNU Lesser General Public License (LGPL) as published
    by the Free Software Foundation; either version 2.1 of the License, or
    (at your option) any later version.  See <http://www.gnu.org/licenses/>.
 }

const
  __ARB_VERSION = 2;  
  __ARB_VERSION_MINOR = 23;  
  __ARB_VERSION_PATCHLEVEL = 0;  
  ARB_VERSION = '2.23.0';  
{xxxxxxxxxxx
#define __ARB_RELEASE (__ARB_VERSION * 10000 + \
                         __ARB_VERSION_MINOR * 100 + \
                         __ARB_VERSION_PATCHLEVEL)
 }
(* Const before type ignored *)
  var
    arb_version : Pchar;cvar;external;
{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   

function arb_midref(x : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function arb_radref(x : longint) : longint;

{ was #define dname(params) para_def_expr }
{ argument types are unknown }
{ return type might be wrong }   
function ARB_IS_LAGOM(x : longint) : longint;

const
  ARB_RND = ARF_RND_DOWN;  

procedure arb_init(x:Tarb_t);cdecl;external;
procedure arb_clear(x:Tarb_t);cdecl;external;
function _arb_vec_init(n:Tslong):Tarb_ptr;cdecl;external;
procedure _arb_vec_clear(v:Tarb_ptr; n:Tslong);cdecl;external;
function arb_mid_ptr(z:Tarb_t):Tarf_ptr;cdecl;external;
function arb_rad_ptr(z:Tarb_t):Tmag_ptr;cdecl;external;
(* Const before type ignored *)
function arb_is_exact(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_equal(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_equal_si(x:Tarb_t; y:Tslong):longint;cdecl;external;
{ implementations are in arb/richcmp.c  }
(* Const before type ignored *)
(* Const before type ignored *)
function arb_eq(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_ne(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_lt(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_le(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_gt(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_ge(x:Tarb_t; y:Tarb_t):longint;cdecl;external;
procedure arb_zero(x:Tarb_t);cdecl;external;
(* Const before type ignored *)
function arb_is_zero(x:Tarb_t):longint;cdecl;external;
procedure arb_pos_inf(x:Tarb_t);cdecl;external;
procedure arb_neg_inf(x:Tarb_t);cdecl;external;
procedure arb_zero_pm_inf(x:Tarb_t);cdecl;external;
procedure arb_zero_pm_one(x:Tarb_t);cdecl;external;
procedure arb_unit_interval(x:Tarb_t);cdecl;external;
procedure arb_indeterminate(x:Tarb_t);cdecl;external;
(* Const before type ignored *)
function arb_is_finite(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_set(x:Tarb_t; y:Tarb_t);cdecl;external;
procedure arb_swap(x:Tarb_t; y:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_set_round(z:Tarb_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_trim(y:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_neg(y:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_neg_round(x:Tarb_t; y:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_abs(y:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_nonnegative_abs(y:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_sgn(res:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
function arb_sgn_nonzero(x:Tarb_t):longint;cdecl;external;
procedure _arb_digits_round_inplace(s:Pchar; shift:Pflint_bitcnt_t; error:Tfmpz_t; n:Tslong; rnd:Tarf_rnd_t);cdecl;external;
(* Const before type ignored *)
function arb_set_str(res:Tarb_t; inp:Pchar; prec:Tslong):longint;cdecl;external;
{ was #define dname def_expr }
function ARB_STR_MORE : longint; { return type might be wrong }

{ was #define dname def_expr }
function ARB_STR_NO_RADIUS : longint; { return type might be wrong }

{ was #define dname def_expr }
function ARB_STR_CONDENSE : longint; { return type might be wrong }

(* Const before type ignored *)
function arb_get_str(x:Tarb_t; n:Tslong; flags:Tulong):Pchar;cdecl;external;
(* Const before type ignored *)
procedure arb_set_arf(x:Tarb_t; y:Tarf_t);cdecl;external;
procedure arb_set_si(x:Tarb_t; y:Tslong);cdecl;external;
procedure arb_set_ui(x:Tarb_t; y:Tulong);cdecl;external;
procedure arb_set_d(x:Tarb_t; y:Tdouble);cdecl;external;
(* Const before type ignored *)
procedure arb_set_fmpz(x:Tarb_t; y:Tfmpz_t);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_set_fmpz_2exp(x:Tarb_t; y:Tfmpz_t; exp:Tfmpz_t);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_set_round_fmpz_2exp(y:Tarb_t; x:Tfmpz_t; exp:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_set_round_fmpz(y:Tarb_t; x:Tfmpz_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
function arb_is_one(f:Tarb_t):longint;cdecl;external;
procedure arb_one(f:Tarb_t);cdecl;external;
{$ifdef FLINT_HAVE_FILE}
(* Const before type ignored *)
procedure arb_fprint(file:PFILE; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_fprintd(file:PFILE; x:Tarb_t; digits:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_fprintn(file:PFILE; x:Tarb_t; digits:Tslong; flags:Tulong);cdecl;external;
{$endif}
(* Const before type ignored *)

procedure arb_print(x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_printd(x:Tarb_t; digits:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_printn(x:Tarb_t; digits:Tslong; flags:Tulong);cdecl;external;
(* Const before type ignored *)
procedure arb_mul_2exp_si(y:Tarb_t; x:Tarb_t; e:Tslong);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure arb_mul_2exp_fmpz(y:Tarb_t; x:Tarb_t; e:Tfmpz_t);cdecl;external;
(* Const before type ignored *)
function arb_is_int(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_int_2exp_si(x:Tarb_t; e:Tslong):longint;cdecl;external;
{ implementations are in arb/richcmp.c  }
(* Const before type ignored *)
function arb_contains_zero(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_nonzero(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_positive(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_nonnegative(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_negative(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_is_nonpositive(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_negative(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_nonpositive(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_positive(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_nonnegative(x:Tarb_t):longint;cdecl;external;
(* Const before type ignored *)
procedure arb_get_mag_lower(z:Tmag_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_get_mag_lower_nonnegative(z:Tmag_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_get_mag(z:Tmag_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_get_mid_arb(z:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_get_rad_arb(z:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_get_abs_ubound_arf(u:Tarf_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_get_abs_lbound_arf(u:Tarf_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_get_ubound_arf(u:Tarf_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_get_lbound_arf(u:Tarf_t; x:Tarb_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_nonnegative_part(res:Tarb_t; x:Tarb_t);cdecl;external;
(* Const before type ignored *)
function arb_rel_error_bits(x:Tarb_t):Tslong;cdecl;external;
(* Const before type ignored *)
function arb_rel_accuracy_bits(x:Tarb_t):Tslong;cdecl;external;
(* Const before type ignored *)
function arb_rel_one_accuracy_bits(x:Tarb_t):Tslong;cdecl;external;
(* Const before type ignored *)
function arb_bits(x:Tarb_t):Tslong;cdecl;external;
procedure arb_randtest_exact(x:Tarb_t; state:Tflint_rand_t; prec:Tslong; mag_bits:Tslong);cdecl;external;
procedure arb_randtest_wide(x:Tarb_t; state:Tflint_rand_t; prec:Tslong; mag_bits:Tslong);cdecl;external;
procedure arb_randtest_precise(x:Tarb_t; state:Tflint_rand_t; prec:Tslong; mag_bits:Tslong);cdecl;external;
procedure arb_randtest(x:Tarb_t; state:Tflint_rand_t; prec:Tslong; mag_bits:Tslong);cdecl;external;
procedure arb_randtest_special(x:Tarb_t; state:Tflint_rand_t; prec:Tslong; mag_bits:Tslong);cdecl;external;
procedure arb_urandom(x:Tarb_t; state:Tflint_rand_t; prec:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_add_error_arf(x:Tarb_t; err:Tarf_t);cdecl;external;
procedure arb_add_error_2exp_si(x:Tarb_t; err:Tslong);cdecl;external;
(* Const before type ignored *)
procedure arb_add_error_2exp_fmpz(x:Tarb_t; err:Tfmpz_t);cdecl;external;
(* Const before type ignored *)
procedure arb_add_error(x:Tarb_t; error:Tarb_t);cdecl;external;
(* Const before type ignored *)
procedure arb_add_error_mag(x:Tarb_t; err:Tmag_t);cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains_arf(x:Tarb_t; y:Tarf_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains_fmpq(x:Tarb_t; y:Tfmpq_t):longint;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains_fmpz(x:Tarb_t; y:Tfmpz_t):longint;cdecl;external;
(* Const before type ignored *)
function arb_contains_si(x:Tarb_t; y:Tslong):longint;cdecl;external;
{$ifdef __MPFR_H}
(* Const before type ignored *)
(* Const before type ignored *)
function arb_contains_mpfr(x:Tarb_t; y:Tmpfr_t):longint;cdecl;external;
{$endif}
(* Const before type ignored *)
(* Const before type ignored *)
